--- a/packages/gjs/unit/package.json
+++ b/packages/gjs/unit/package.json
@@ -2,15 +2,28 @@
   "name": "@gjsify/unit",
   "version": "0.0.1",
   "description": "A BDD-style testing framework for Gjs",
-  "main": "lib/esm/index.js",
+  "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "types": "lib/types/index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./lib/types/index.d.ts",
+        "default": "./lib/esm/index.js"
+      },
+      "require": {
+        "types": "./lib/types/index.d.ts",
+        "default": "./lib/cjs/index.js"
+      }
+    }
+  },
   "scripts": {
     "print:name": "echo '@gjsify/unit'",
+    "clear": "rm -rf lib tsconfig.tsbuildinfo test.gjs.mjs",
     "build": "yarn print:name && yarn build:gjsify && yarn build:types",
     "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
-    "build:types": "tsc --emitDeclarationOnly",
+    "build:types": "tsc --project tsconfig.types.json",
     "build:test": "yarn build:test:gjs && yarn build:test:node",
     "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
     "build:test:node": "gjsify build src/test.mts --app node --outfile test.node.mjs",
@@ -38,5 +51,9 @@
     "@girs/gjs": "^3.0.4",
     "@gjsify/cli": "workspace:^",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "@gjsify/assert": "workspace:^",
+    "@gjsify/process": "workspace:^"
   }
 }
