--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -27,6 +27,7 @@
         "constants-browserify": "^1.0.0",
         "core-js": "^3.30.2",
         "crypto-browserify": "^3.12.0",
+        "esm": "^3.2.25",
         "fast-glob": "^3.2.12",
         "lodash": "^4.17.21",
         "micromatch": "^4.0.5",
