--- a/packages/node/os/package.json
+++ b/packages/node/os/package.json
@@ -5,6 +5,18 @@
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./lib/types/index.d.ts",
+        "default": "./lib/esm/index.js"
+      },
+      "require": {
+        "types": "./lib/types/index.d.ts",
+        "default": "./lib/cjs/index.js"
+      }
+    }
+  },
   "scripts": {
     "clear": "rm -rf lib tsconfig.tsbuildinfo test.gjs.mjs test.node.mjs",
     "print:name": "echo '@gjsify/os'",
