--- a/packages/node/process/tsconfig.types.json
+++ b/packages/node/process/tsconfig.types.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "declarationDir": "lib/types",
   },
   "exclude": ["src/test.ts", "src/test.mts", "src/**/*.spec.ts", "src/**/*.spec.mts"]
 }
