--- a/packages/web/abort-controller/package.json
+++ b/packages/web/abort-controller/package.json
@@ -7,7 +7,7 @@
     "module": "lib/esm/index.js",
     "types": "lib/types/index.d.ts",
     "scripts": {
-        "clear": "rm -rf lib tsconfig.tsbuildinfo",
+        "clear": "rm -rf lib tsconfig.tsbuildinfo tsconfig.types.tsbuildinfo || exit 0",
         "print:name": "echo '@gjsify/abort-controller'",
         "build": "yarn print:name && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
