--- a/packages/web/fetch/package.json
+++ b/packages/web/fetch/package.json
@@ -7,18 +7,18 @@
     "type": "module",
     "exports": {
         ".": {
-            "import": "./lib/esm/index.js",
-            "default": "./lib/esm/index.js",
-            "require": "./lib/cjs/index.js"
+            "import": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/esm/index.js"
+            },
+            "require": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/cjs/index.js"
+            }
         }
     },
-    "*": {
-        "": [
-            "lib/types/index.d.js"
-        ]
-    },
     "scripts": {
-        "clear": "rm -rf lib tsconfig.tsbuildinfo",
+        "clear": "rm -rf lib tsconfig.tsbuildinfo tsconfig.types.tsbuildinfo || exit 0",
         "print:name": "echo '@gjsify/fetch'",
         "build": "yarn print:name && yarn build:gjsify",
         "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
