--- a/package.json
+++ b/package.json
@@ -26,6 +26,14 @@
     "typescript": "^5.1.3"
   },
   "packageManager": "yarn@4.0.0-rc.45",
+  "resolutions": {
+    "@girs/gjs": "3.0.4",
+    "@girs/glib-2.0": "2.76.1-3.0.4",
+    "@girs/gobject-2.0": "2.76.1-3.0.4",
+    "@girs/gio-2.0": "2.76.1-3.0.4",
+    "@girs/gtk-4.0": "4.10.3-3.0.4",
+    "@girs/soup-3.0": "3.4.2-3.0.4"
+  },
   "workspaces": [
     "packages/infra/*",
     "packages/gjs/*",
