--- a/packages/gjs/utils/package.json
+++ b/packages/gjs/utils/package.json
@@ -35,11 +35,12 @@
         "fs"
     ],
     "devDependencies": {
-        "@girs/gjs": "^3.0.4",
         "@gjsify/cli": "workspace:^",
         "typescript": "^5.1.3"
     },
     "dependencies": {
-        "@girs/gio-2.0": "2.76.1-3.0.4"
+        "@girs/gio-2.0": "2.76.1-3.0.4",
+        "@girs/gjs": "^3.0.4",
+        "@girs/glib-2.0": "2.76.1-3.0.4"
     }
 }
