--- a/packages/node/zlib/package.json
+++ b/packages/node/zlib/package.json
@@ -8,14 +8,14 @@
     "type": "module",
     "exports": {
         ".": {
-            "import": "./lib/esm/index.js",
-            "default": "./lib/esm/index.js",
-            "require": "./lib/cjs/index.js"
-        },
-        "./types": {
-            "import": "./lib/esm/types/index.js",
-            "default": "./lib/esm/types/index.js",
-            "require": "./lib/cjs/types/index.js"
+            "import": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/esm/index.js"
+            },
+            "require": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/cjs/index.js"
+            }
         }
     },
     "scripts": {
