--- a/packages/web/html-image-element/package.json
+++ b/packages/web/html-image-element/package.json
@@ -2,15 +2,27 @@
     "name": "@gjsify/html-image-element",
     "version": "0.0.1",
     "description": "Web html-image-element module for Gjs",
-    "module": "lib/index.js",
-    "types": "lib/index.d.ts",
     "type": "module",
+    "main": "lib/cjs/index.js",
+    "module": "lib/esm/index.js",
+    "exports": {
+        ".": {
+            "import": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/esm/index.js"
+            },
+            "require": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/cjs/index.js"
+            }
+        }
+    },
     "scripts": {
         "clear": "rm -rf lib tsconfig.tsbuildinfo test.gjs.mjs test.node.mjs",
         "print:name": "echo '@gjsify/html-image-element'",
         "build": "yarn print:name && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
-        "build:types": "tsc --emitDeclarationOnly || exit 0",
+        "build:types": "tsc --project tsconfig.types.json",
         "build:test": "yarn build:test:gjs",
         "build:test:gjs": "gjsify build src/test.mts --app gjs --outfile test.gjs.mjs",
         "test": "yarn print:name && yarn build:gjsify && yarn build:test && yarn test:gjs",
