--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -7,19 +7,14 @@
     "type": "module",
     "exports": {
         ".": {
+            "types": "./lib/index.d.ts",
             "import": "./lib/index.js",
             "default": "./lib/index.js"
         },
         "./*": {
+            "types": "./lib/*.d.ts",
             "import": "./lib/*.js",
             "default": "./lib/*.js"
-        }
-    },
-    "typesVersions": {
-        "*": {
-            "*": [
-                "./lib/*.d.ts"
-            ]
         }
     },
     "scripts": {
