--- a/packages/web/dom-events/package.json
+++ b/packages/web/dom-events/package.json
@@ -6,6 +6,18 @@
     "module": "lib/esm/index.js",
     "types": "lib/types/index.d.js",
     "type": "module",
+    "exports": {
+        ".": {
+            "import": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/esm/index.js"
+            },
+            "require": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/cjs/index.js"
+            }
+        }
+    },
     "scripts": {
         "clear": "rm -rf lib tsconfig.tsbuildinfo test.gjs.mjs",
         "print:name": "echo '@gjsify/dom-events'",
