--- a/packages/gjs/gio-2.0/package.json
+++ b/packages/gjs/gio-2.0/package.json
@@ -41,6 +41,7 @@
     },
     "dependencies": {
         "@girs/gio-2.0": "2.76.1-3.0.4",
-        "@girs/gjs": "^3.0.4"
+        "@girs/gjs": "^3.0.4",
+        "@gjsify/stream": "workspace:^"
     }
 }
