--- a/packages/gjs/types/@types/gwebgl-0.1/package.json
+++ b/packages/gjs/types/@types/gwebgl-0.1/package.json
@@ -32,8 +32,8 @@
     },
     "dependencies": {
         "@girs/gjs": "3.0.4",
-        "@girs/glib-2.0": "2.76.1-3.0.4",
-        "@girs/gobject-2.0": "2.76.1-3.0.4"
+        "@girs/glib-2.0": "*-3.0.4",
+        "@girs/gobject-2.0": "*-3.0.4"
     },
     "devDependencies": {
         "typescript": "*"
