--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -7,14 +7,24 @@
     "type": "module",
     "exports": {
         ".": {
-            "types": "./lib/index.d.ts",
-            "import": "./lib/index.js",
-            "default": "./lib/index.js"
+            "import": {
+                "types": "./lib/index.d.ts",
+                "default": "./lib/index.js"
+            },
+            "require": {
+                "types": "./lib/index.d.ts",
+                "default": "./lib/index.js"
+            }
         },
         "./*": {
-            "types": "./lib/*.d.ts",
-            "import": "./lib/*.js",
-            "default": "./lib/*.js"
+            "import": {
+                "types": "./lib/*.d.ts",
+                "default": "./lib/*.js"
+            },
+            "require": {
+                "types": "./lib/*.d.ts",
+                "default": "./lib/*.js"
+            }
         }
     },
     "scripts": {
