--- a/packages/web/webgl/package.json
+++ b/packages/web/webgl/package.json
@@ -26,7 +26,7 @@
         "build": "yarn print:name && yarn build:meson && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/ts/**/*.{ts,js}'",
         "build:meson": "yarn init:meson && meson compile -C build",
-        "build:types": "tsc --emitDeclarationOnly || exit 0",
+        "build:types": "tsc --project tsconfig.types.json || exit 0",
         "build:test": "gjsify build src/ts/test.ts --app gjs --outfile test.gjs.js",
         "test": "yarn print:name && yarn build:gjsify && yarn build:test && yarn test:gjs",
         "test:gjs": "LD_LIBRARY_PATH=build GI_TYPELIB_PATH=build gjs -m test.gjs.js"
