--- a/packages/node/fs/package.json
+++ b/packages/node/fs/package.json
@@ -52,7 +52,12 @@
         "typescript": "^5.1.3"
     },
     "dependencies": {
+        "@girs/glib-2.0": "2.76.1-3.0.4",
+        "@gjsify/buffer": "workspace:^",
         "@gjsify/deno_std": "workspace:^",
-        "@gjsify/gio-2.0": "workspace:^"
+        "@gjsify/gio-2.0": "workspace:^",
+        "@gjsify/stream": "workspace:^",
+        "@gjsify/url": "workspace:^",
+        "@gjsify/utils": "workspace:^"
     }
 }
