--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "clear": "yarn workspaces foreach -v --no-private --parallel run clear",
     "print:name": "echo 'gjsify (root)'",
     "print:yarn": "echo 'Using yarn' && yarn --version",
-    "build": "yarn run build:cli && yarn run build:native-libs && yarn run build:deno && yarn run build:gjs && yarn run build:web",
+    "build": "yarn run build:cli && yarn run build:native-libs && yarn run build:deno && yarn run build:gjs && yarn run build:node && yarn run build:web",
     "build:cli": "yarn workspaces foreach -pR --topological-dev --from '@gjsify/cli' run build",
     "build:native-libs": "yarn workspace @gjsify/webgl run build:meson && yarn workspace @gjsify/types run build",
     "build:gjs": "yarn workspaces foreach -ptR --no-private --from '{@gjsify/gio-2.0,@gjsify/soup-3.0,@gjsify/utils,@gjsify/unit}' run build",
     "build:web": "yarn workspaces foreach -ptR --no-private --from '{@gjsify/abort-controller,@gjsify/dom-events,@gjsify/fetch,@gjsify/web-globals,@gjsify/html-image-element,@gjsify/webgl}' run build",
-    "build:deno": "yarn workspaces foreach -ptR --no-private --from '{@gjsify/deno-runtime,@gjsify/deno_std, @gjsify/deno-globals}' run build"
+    "build:deno": "yarn workspaces foreach -ptR --no-private --from '{@gjsify/deno-runtime,@gjsify/deno_std, @gjsify/deno-globals}' run build",
+    "build:node": "yarn workspaces foreach -ptR --no-private --from '{@gjsify/assert,@gjsify/buffer,@gjsify/console,@gjsify/events,@gjsify/fs,@gjsify/node-globals,@gjsify/http,@gjsify/net,@gjsify/os,@gjsify/process,@gjsify/querystring,@gjsify/require,@gjsify/stream,@gjsify/tty,@gjsify/url,@gjsify/util,@gjsify/zlib}' run build"
   },
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "MIT",
@@ -32,7 +33,8 @@
     "@girs/gobject-2.0": "2.76.1-3.0.4",
     "@girs/gio-2.0": "2.76.1-3.0.4",
     "@girs/gtk-4.0": "4.10.3-3.0.4",
-    "@girs/soup-3.0": "3.4.2-3.0.4"
+    "@girs/soup-3.0": "3.4.2-3.0.4",
+    "@types/lodash": "ts5.1"
   },
   "workspaces": [
     "packages/infra/*",
