chore: Upgrade dependencies

--- a/packages/gjs/types/package.json
+++ b/packages/gjs/types/package.json
@@ -6,10 +6,10 @@
     "clear": "rm -rf @types",
     "print:name": "echo '@gjsify/types'",
     "build": "echo 'Please build the types by hand and commit the changes'",
-    "build:types": "ts-for-gir generate",
+    "build:types": "ts-for-gir generate && yarn install",
     "list": "ts-for-gir list Gio-2.0 GLib-2.0 GTop-2.0"
   },
   "devDependencies": {
-    "@ts-for-gir/cli": "^3.0.4"
+    "@ts-for-gir/cli": "^3.1.0"
   }
 }
