--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "scripts": {
     "test": "yarn workspaces foreach -v --no-private run test",
     "clear": "yarn workspaces foreach -v --no-private --parallel run clear",
+    "npm:publish": "yarn run build && yarn workspaces foreach -v --no-private npm publish --tolerate-republish --tag latest --access public",
     "print:name": "echo 'gjsify (root)'",
     "print:yarn": "echo 'Using yarn' && yarn --version",
-    "build": "yarn run build:cli && yarn run build:native-libs && yarn run build:deno && yarn run build:gjs && yarn run build:node && yarn run build:web",
-    "build:cli": "yarn workspaces foreach -pR --topological-dev --from '@gjsify/cli' run build",
+    "build": "yarn run build:infra && yarn run build:native-libs && yarn run build:deno && yarn run build:gjs && yarn run build:node && yarn run build:web",
+    "build:infra": "yarn workspaces foreach -pR --topological-dev --from '@gjsify/cli' run build",
     "build:native-libs": "yarn workspace @gjsify/webgl run build:meson && yarn workspace @gjsify/types run build",
     "build:gjs": "yarn workspaces foreach -ptR --no-private --from '{@gjsify/gio-2.0,@gjsify/soup-3.0,@gjsify/utils,@gjsify/unit}' run build",
     "build:web": "yarn workspaces foreach -ptR --no-private --from '{@gjsify/abort-controller,@gjsify/dom-events,@gjsify/fetch,@gjsify/web-globals,@gjsify/html-image-element,@gjsify/webgl}' run build",
@@ -28,12 +29,6 @@
   },
   "packageManager": "yarn@4.0.0-rc.45",
   "resolutions": {
-    "@girs/gjs": "3.0.4",
-    "@girs/glib-2.0": "2.76.1-3.0.4",
-    "@girs/gobject-2.0": "2.76.1-3.0.4",
-    "@girs/gio-2.0": "2.76.1-3.0.4",
-    "@girs/gtk-4.0": "4.10.3-3.0.4",
-    "@girs/soup-3.0": "3.4.2-3.0.4",
     "@types/lodash": "ts5.1"
   },
   "workspaces": [
