--- a/packages/gjs/gio-2.0/package.json
+++ b/packages/gjs/gio-2.0/package.json
@@ -19,11 +19,11 @@
         }
     },
     "scripts": {
-        "clear": "rm -rf lib tsconfig.tsbuildinfo test.gjs.js",
+        "clear": "rm -rf lib tsconfig.tsbuildinfo tsconfig.types.tsbuildinfo test.gjs.js.meta.json test.gjs.js",
         "print:name": "echo '@gjsify/gio-2.0'",
         "build": "yarn print:name && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
-        "build:types": "tsc --project tsconfig.types.json || exit 0",
+        "build:types": "tsc --project tsconfig.types.json",
         "build:test": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
         "test": "yarn print:name && yarn build:gjsify && yarn build:test && yarn test:gjs",
         "test:gjs": "gjs -m test.gjs.js"
@@ -36,12 +36,12 @@
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.16.16",
+        "@types/node": "^20.3.1",
         "typescript": "^5.1.3"
     },
     "dependencies": {
-        "@girs/gio-2.0": "2.76.1-3.0.4",
-        "@girs/gjs": "^3.0.4",
+        "@girs/gio-2.0": "2.76.1-3.1.0",
+        "@girs/gjs": "^3.1.0",
         "@gjsify/stream": "workspace:^"
     }
 }
