--- a/packages/gjs/gio-2.0/tsconfig.json
+++ b/packages/gjs/gio-2.0/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "module": "ESNext",
-      "lib": ["DOM"],
+      "lib": ["ESNext"],
       "target": "ESNext",
       "moduleResolution": "bundler",
       "experimentalDecorators": true,
