--- a/packages/gjs/soup-3.0/package.json
+++ b/packages/gjs/soup-3.0/package.json
@@ -2,16 +2,28 @@
     "name": "@gjsify/soup-3.0",
     "version": "0.0.2",
     "description": "Extended Soup-3.0 module for Gjsify",
-    "main": "lib/index.js",
-    "module": "lib/index.js",
-    "types": "lib/index.d.ts",
+    "main": "lib/cjs/index.js",
+    "module": "lib/esm/index.js",
+    "types": "lib/types/index.d.ts",
     "type": "module",
+    "exports": {
+        ".": {
+            "import": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/esm/index.js"
+            },
+            "require": {
+                "types": "./lib/types/index.d.ts",
+                "default": "./lib/cjs/index.js"
+            }
+        }
+    },
     "scripts": {
-        "clear": "rm -rf lib tsconfig.tsbuildinfo ",
+        "clear": "rm -rf lib tsconfig.tsbuildinfo tsconfig.types.tsbuildinfo test.gjs.js.meta.json test.gjs.js",
         "print:name": "echo '@gjsify/soup-3.0'",
         "build": "yarn print:name && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
-        "build:types": "tsc --emitDeclarationOnly || exit 0",
+        "build:types": "tsc --project tsconfig.types.json",
         "build:test": "gjsify build src/test.ts --app gjs --outfile test.gjs.js",
         "test": "yarn print:name && yarn build:gjsify && yarn build:test && yarn test:gjs",
         "test:gjs": "gjs -m test.gjs.js"
@@ -24,11 +36,12 @@
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "@types/node": "^18.16.16",
+        "@types/node": "^20.3.1",
         "typescript": "^5.1.3"
     },
     "dependencies": {
-        "@girs/gjs": "^3.0.4",
-        "@girs/soup-3.0": "3.4.2-3.0.4"
+        "@girs/gjs": "^3.1.0",
+        "@girs/soup-3.0": "3.4.2-3.1.0",
+        "@gjsify/gio-2.0": "workspace:^"
     }
 }
