--- a/packages/gjs/soup-3.0/tsconfig.json
+++ b/packages/gjs/soup-3.0/tsconfig.json
@@ -1,19 +1,19 @@
 {
-    "compilerOptions": {
-      "module": "ESNext",
-      "types": ["node"],
-      "target": "ESNext",
-      "moduleResolution": "NodeNext",
-      "experimentalDecorators": true,
-      "outDir": "lib",
-      "rootDir": "src",
-      "composite": true,
-      "strict": true
-    },
-    "skipLibCheck": true,
-    "allowJs": true,
-    "checkJs": false,
-    "reflection": false,
-    "include": ["src/**/*.ts"],
-    "exclude": ["src/test.ts", "src/**/*.spec.ts"]
+  "compilerOptions": {
+    "module": "ESNext",
+    "lib": ["ESNext"],
+    "target": "ESNext",
+    "moduleResolution": "bundler",
+    "experimentalDecorators": true,
+    "outDir": "lib",
+    "rootDir": "src",
+    "composite": true,
+    "strict": true
+  },
+  "skipLibCheck": true,
+  "allowJs": true,
+  "checkJs": false,
+  "reflection": false,
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/test.ts", "src/**/*.spec.ts"]
 }
