--- a/packages/gjs/types/@types/gwebgl-0.1/package.json
+++ b/packages/gjs/types/@types/gwebgl-0.1/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@girs/gwebgl-0.1",
-    "version": "0.1.0-3.0.4",
+    "version": "0.1.0-3.1.0",
     "description": "GJS TypeScript type definitions for Gwebgl-0.1, generated from library version 0.1.0",
     "type": "module",
     "module": "gwebgl-0.1.js",
@@ -27,13 +27,13 @@
     },
     "scripts": {
         "test": "yarn test:esm && yarn test:cjs",
-        "test:esm": "NODE_OPTIONS=--max_old_space_size=9216 tsc --noEmit gwebgl-0.1.d.ts || exit 0",
-        "test:cjs": "NODE_OPTIONS=--max_old_space_size=9216 tsc --noEmit gwebgl-0.1.d.cts || exit 0"
+        "test:esm": "NODE_OPTIONS=--max_old_space_size=9216 tsc --noEmit gwebgl-0.1.d.ts",
+        "test:cjs": "NODE_OPTIONS=--max_old_space_size=9216 tsc --noEmit gwebgl-0.1.d.cts"
     },
     "dependencies": {
-        "@girs/gjs": "3.0.4",
-        "@girs/glib-2.0": "*-3.0.4",
-        "@girs/gobject-2.0": "*-3.0.4"
+        "@girs/gjs": "3.1.0",
+        "@girs/glib-2.0": "^2.76.1-3.1.0",
+        "@girs/gobject-2.0": "^2.76.1-3.1.0"
     },
     "devDependencies": {
         "typescript": "*"
