--- a/packages/infra/esbuild-plugin-deepkit/tsconfig.json
+++ b/packages/infra/esbuild-plugin-deepkit/tsconfig.json
@@ -5,6 +5,7 @@
       "declaration": true,
       "target": "ESNext",
       "module": "ESNext",
+      "types": ["node"],
       "moduleResolution": "bundler"
     },
     "files": ["src/index.ts"]
