--- a/packages/infra/esbuild-plugin-transform-ext/tsconfig.json
+++ b/packages/infra/esbuild-plugin-transform-ext/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "ESNext",
     "target": "ESNext",
     "outDir": "dist",
+    "types": ["node"],
     "declarationDir": "dist/types",
     "declaration": true,
     "allowSyntheticDefaultImports": true,
