--- a/packages/gjs/unit/package.json
+++ b/packages/gjs/unit/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "print:name": "echo '@gjsify/unit'",
-    "clear": "rm -rf lib tsconfig.tsbuildinfo test.gjs.mjs",
+    "clear": "rm -rf lib tsconfig.tsbuildinfo test.gjs.mjs test.gjs.mjs.meta.json test.node.mjs || exit 0",
     "build": "yarn print:name && yarn build:gjsify && yarn build:types",
     "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
     "build:types": "tsc --project tsconfig.types.json",
