--- a/packages/gjs/unit/tsconfig.json
+++ b/packages/gjs/unit/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "lib",
-    "types": [],
+    "types": ["node"],
     "lib": ["ESNext"],
     "declarationDir": "lib/types",
     "declaration": true,
