--- a/packages/infra/esbuild-plugin-transform-ext/package.json
+++ b/packages/infra/esbuild-plugin-transform-ext/package.json
@@ -11,7 +11,7 @@
         "print:name": "echo '@gjsify/esbuild-plugin-transform-ext'",
         "build": "yarn print:name && yarn build:js && yarn build:types",
         "build:js": "node esbuild.mjs",
-        "build:types": "tsc --emitDeclarationOnly || exit 0"
+        "build:types": "tsc --emitDeclarationOnly"
     },
     "keywords": [
         "gjs",
