--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "typescript"
   ],
   "scripts": {
-    "test": "yarn workspaces foreach -v --no-private run test",
+    "test": "yarn workspaces foreach -v --no-private --exclude '@girs/*' run test",
     "clear": "yarn workspaces foreach -v --no-private --parallel run clear",
     "npm:publish": "yarn run build && yarn workspaces foreach -v --no-private npm publish --tolerate-republish --tag latest --access public",
     "print:name": "echo 'gjsify (root)'",
