--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -12,7 +12,7 @@
         "test": "yarn print:name && echo 'nothing to do'",
         "build": "yarn print:name && yarn build:js && yarn build:types",
         "build:js": "node esbuild.mjs",
-        "build:types": "tsc --emitDeclarationOnly || exit 0"
+        "build:types": "tsc --project ./tsconfig.json || exit 0"
     },
     "keywords": [
         "gjs",
@@ -23,23 +23,9 @@
         "@gjsify/esbuild-plugin-deepkit": "workspace:^",
         "@gjsify/esbuild-plugin-deno-loader": "workspace:^",
         "@gjsify/esbuild-plugin-transform-ext": "workspace:^",
-        "assert": "^2.0.0",
-        "constants-browserify": "^1.0.0",
-        "core-js": "^3.31.0",
-        "crypto-browserify": "^3.12.0",
-        "esm": "^3.2.25",
-        "fast-glob": "^3.2.12",
-        "lodash": "^4.17.21",
-        "micromatch": "^4.0.5",
-        "path-browserify": "^1.0.1",
-        "punycode": "^2.3.0",
-        "stream-browserify": "^3.0.0",
-        "string_decoder": "^1.3.0",
-        "test": "^3.3.0"
+        "fast-glob": "^3.2.12"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.195",
-        "@types/micromatch": "^4.0.2",
         "esbuild": "^0.18.2",
         "typescript": "^5.1.3"
     }
