--- a/packages/infra/cli/package.json
+++ b/packages/infra/cli/package.json
@@ -33,6 +33,7 @@
         "yargs": "^17.7.2"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.195",
         "@types/yargs": "^17.0.24",
         "typescript": "^5.1.3"
     }
