fix(cli): Only set default outfile if no outdir is set

--- a/packages/infra/cli/tsconfig.json
+++ b/packages/infra/cli/tsconfig.json
@@ -8,5 +8,6 @@
       "allowSyntheticDefaultImports": true,
       "strict": true
     },
+    "include": ["src/lodash.d.ts"],
     "files": ["src/index.ts"]
 }
