--- a/packages/infra/esbuild-plugin-gjsify/tsconfig.json
+++ b/packages/infra/esbuild-plugin-gjsify/tsconfig.json
@@ -12,5 +12,6 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true
   },
+  "include": ["src/lodash.d.ts"],
   "files": ["src/index.ts"]
 }
