--- a/packages/infra/esbuild-plugin-deepkit/package.json
+++ b/packages/infra/esbuild-plugin-deepkit/package.json
@@ -27,11 +27,11 @@
         "fs"
     ],
     "dependencies": {
-        "@deepkit/type-compiler": "^1.0.1-alpha.97"
+        "@deepkit/type-compiler": "^1.0.1-alpha.97",
+        "typescript": "^5.1.3"
     },
     "devDependencies": {
         "@types/node": "^20.3.1",
-        "esbuild": "^0.18.3",
-        "typescript": "^5.1.3"
+        "esbuild": "^0.18.3"
     }
 }
