--- a/packages/node/fs/package.json
+++ b/packages/node/fs/package.json
@@ -55,6 +55,7 @@
         "@girs/glib-2.0": "2.76.1-3.1.0",
         "@gjsify/buffer": "workspace:^",
         "@gjsify/deno_std": "workspace:^",
+        "@gjsify/events": "workspace:^",
         "@gjsify/gio-2.0": "workspace:^",
         "@gjsify/stream": "workspace:^",
         "@gjsify/url": "workspace:^",
