--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,9 @@
 checksumBehavior: update
 
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-4.0.0-rc.45.cjs
+yarnPath: .yarn/releases/yarn-4.0.2.cjs
