--- a/examples/gio-cat/package.json
+++ b/examples/gio-cat/package.json
@@ -9,8 +9,8 @@
     "start": "gjs -m dist/index.js src/index.ts"
   },
   "dependencies": {
-    "@girs/gio-2.0": "^2.76.1-3.1.0",
-    "@girs/gjs": "^3.1.0",
-    "@gjsify/cli": "^0.0.2"
+    "@girs/gio-2.0": "^2.78.0-3.2.6",
+    "@girs/gjs": "^3.2.6",
+    "@gjsify/cli": "workspace:^"
   }
 }
