--- a/examples/esbuild-plugin-deepkit/tsconfig.json
+++ b/examples/esbuild-plugin-deepkit/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "module": "ESNext",
+      "module": "NodeNext",
       "types": [],
       "target": "ESNext",
       "moduleResolution": "NodeNext",
