--- a/packages/infra/esbuild-plugin-alias/tsconfig.json
+++ b/packages/infra/esbuild-plugin-alias/tsconfig.json
@@ -8,7 +8,8 @@
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
   },
   "files": ["src/index.ts"]
 }
