--- a/packages/web/fetch/tsconfig.json
+++ b/packages/web/fetch/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "NodeNext",
     "types": ["node"],
     "target": "ESNext",
     "moduleResolution": "NodeNext",
