--- a/packages/gjs/utils/tsconfig.json
+++ b/packages/gjs/utils/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
+    "module": "NodeNext",
     "types": [],
     "lib": ["ESNext"],
     "target": "ESNext",
